--- a/Menu.html
+++ b/Menu.html
@@ -4,10 +4,12 @@
 <body>
 <h1>Controle de venda de pizzas </h1>
 <p>Pizzaria: Pizza Alegre</p>
-<p>Versão: 001</p>
+<p>Versão: 002</p>
 <p>Operador: </p>
 <br>
 <p>Telefone:</p>
-<p>Cliente</p>    
+<p>Cliente:</p> 
+<p>CPF:</p>
+<p>E-mail:</p>
 </body>
 </html>
