--- a/Menu.html
+++ b/Menu.html
@@ -4,12 +4,14 @@
 <body>
 <h1>Controle de venda de pizzas </h1>
 <p>Pizzaria: Pizza Alegre</p>
-<p>Versão: 002</p>
+<p>Versão: 003</p>
 <p>Operador: </p>
 <br>
 <p>Telefone:</p>
 <p>Cliente:</p> 
 <p>CPF:</p>
 <p>E-mail:</p>
+<br> 
+<p>Aceita participar das promoçõe? () Sim () Não
 </body>
 </html>
